@@ -452,7 +452,6 @@ using the C<cursor> parameter:
         push @ids, @{ $r->{ids} };
     }
 
-
 =head2 Synthetic Arguments
 
 In addition to the arguments described in the Twitter API Documentation for
@@ -484,6 +483,12 @@ C<created_at> time greater than C<since> will be returned by the API call.
 These methods are provided when trait C<API::REST> is included in the C<traits>
 option to C<new>.
 
+=head2 Common Parameters
+
+=over 4
+
+=item id
+
 Several of these methods accept a user ID as the C<id> parameter.  The user ID
 can be either a screen name, or the users numeric ID.  To disambiguate, use
 the C<screen_name> or C<user_id> parameters, instead.
@@ -504,6 +509,17 @@ calls are NOT equivalent:
 
 Whenever the C<id> parameter is required and C<user_id> and C<screen_name> are
 also parameters, using any one of them satisfies the requirement.
+
+=item skip_user
+
+The timeline methods all accept an optional C<skip_user> parameter.  When set
+to a true value, the statuses returned in a timeline will not contain an entire
+embedded user HASH. Instead, the user node will contain only an C<id> element
+to indicate the numerical ID of the Twitter user that sent the status.
+
+=back
+
+=head2 Methods
 
 [% INCLUDE APIDOC class='API::REST' %]
 
